Update German translation: Nachdenken -> Ponder

--- a/i18n/deu.lang
+++ b/i18n/deu.lang
@@ -22,7 +22,7 @@ id=Button
 {s:"Grace",t:"2025-12-18"}=Sanft
 {s:"Open",t:"2025-12-16"}=Öffnen
 {s:"Recent",t:"2025-12-16"}=Zuletzt
-{s:"Save As",t:"2025-12-18"}=Speichern als
+{s:"Save As",t:"2025-12-18"}=Speich. als
 {s:"Filter",t:"2025-12-16"}=Filter
 {s:"Test",t:"2025-12-18"}=Test
 {s:"Load",t:"2025-12-18"}=Laden
@@ -104,12 +104,12 @@ id=Checkbox
 {s:"Go Limits Test",t:"2025-12-16"}=Go-Limits-Test
 {s:"EP from FEN Test",t:"2025-12-16"}=EP von FEN Test
 {s:"Compute Game Test",t:"2025-12-16"}=Spiel Berechnung Test
-{s:"Ponder Test",t:"2025-12-16"}=Nachdenken-Test
+{s:"Ponder Test",t:"2025-12-16"}=Ponder-Test
 {s:"EPD Test",t:"2025-12-16"}=EPD Test
 {s:"Multiple Games Test",t:"2025-12-16"}=Mehrere Spiele Test
 {s:"Start/Stop Test",t:"2025-12-16"}=Start/Stopp Test
 {s:"Score from White POV",t:"2025-12-18"}=Punktestand aus Sicht von Weiß
-{s:"Ponder",t:"2025-12-18"}=Nachdenken
+{s:"Ponder",t:"2025-12-18"}=Ponder
 {s:"Gauntlet",t:"2025-12-18"}=Gauntlet-Modus
 
 [Translation]
@@ -152,7 +152,7 @@ id=Input
 {s:"Moves to Play",t:"2025-12-18"}=Züge zu spielen
 {s:"Name",t:"2025-12-18"}=Name
 {s:"Hash",t:"2025-12-18"}=Hash
-{s:"ponder",t:"2025-12-16"}=Nachdenken
+{s:"ponder",t:"2025-12-16"}=Ponder
 {s:"MultiPV",t:"2025-12-18"}=MultiPV
 {s:"UCI_EngineAbout",t:"2025-12-16"}=UCI_EngineAbout
 {s:"qaplaBitbaseCache",t:"2025-12-16"}=qaplaBitbaseCache
@@ -183,7 +183,7 @@ id=Input
 {s:"Elo Lower (H\\1)",t:"2025-12-18"}=Elo Untere (H\1)
 {s:"Elo Upper (H\\1)",t:"2025-12-18"}=Elo Obere (H\1)
 {s:"Number of Games",t:"2025-12-16"}=Anzahl Spiele
-{s:"Ponder",t:"2025-12-18"}=Nachdenken
+{s:"Ponder",t:"2025-12-18"}=Ponder
 {s:"Log",t:"2025-12-18"}=Protokoll
 {s:"UCI_AnalyseMode",t:"2025-12-18"}=UCI_AnalyseMode
 {s:"##directoryPath#####directoryPath",t:"2025-12-16"}=##directoryPath#####directoryPath
@@ -633,8 +633,8 @@ id=Text
 {s:"How can I help you?",t:"2025-12-19"}=Wie kann ich Ihnen helfen?
 {s:"Select a tutorial to run:",t:"2025-12-19"}=Wählen Sie ein Lernprogramm zum Ausführen aus:
 {h:"03ec564a",s:"Welcome to the Tournament Tutorial!\n\nThis tutorial",t:"2025-12-18"}=Willkommen beim Turnier-Lernprogramm!\n\nDieses Lernprogramm führt Sie durch die Einrichtung und Durchführung von Engine-Turnieren. Sie können mehrere Schachengines in Round-Robin- und Gauntlet-Matches miteinander vergleichen.\n\nTipp: Wenn Sie einen einfacheren Ansatz bevorzugen, können Sie Turniere auch über den Chatbot konfigurieren und starten - wählen Sie einfach 'Turnier' aus dem Chatbot-Menü. Dieses Lernprogramm deckt den Expertenmodus mit direktem Zugriff auf alle Einstellungen ab.\n\nUm Sie durch den Prozess zu führen, markieren wir die relevanten Abschnitte und Schaltflächen mit einem roten Punkt.\nBewegen Sie den Mauszeiger über die Optionen für detaillierte Tooltips, die jede Einstellung erklären.\n\nLassen Sie uns beginnen! Klicken Sie auf die Registerkarte 'Turnier' im linken Fenster, um die Turnierkonfiguration zu öffnen.
-{h:"c44444aa",s:"Now we'll configure the global engine settings. Th",t:"2025-12-18"}=Jetzt konfigurieren wir die globalen Engine-Einstellungen. Diese Einstellungen gelten für alle Engines im Turnier und gewährleisten faire, konsistente Bedingungen.\n\nEinstellungen können für alle Engines oder einzeln pro Engine gesetzt werden. Wir ändern die Hash-Größe global und das Nachdenken pro Engine:\n• Lassen Sie das Kontrollkästchen neben Hash aktiviert und setzen Sie 'Hash (MB)' auf \1\n• Deaktivieren Sie das Kontrollkästchen neben Ponder - dies ermöglicht uns, das Nachdenken später pro Engine zu steuern
-{h:"0bac575c",s:"Now let's select the engines for our tournament. W",t:"2025-12-18"}=Jetzt wählen wir die Engines für unser Turnier aus. Wir demonstrieren spezifische Engine-Einstellungen: Vergleichen Sie dieselbe Engine gegen sich selbst - einmal mit aktiviertem Nachdenken und einmal ohne.\n\nIm Abschnitt 'Engine-Auswahl' wählen Sie dieselbe Engine zweimal aus (klicken Sie zweimal auf die '+'-Schaltfläche links von 'Verfügbare Engine')\nJetzt sehen Sie dieselbe Engine zweimal in der Liste 'Ausgewählte Engines'. Erweitern Sie die erste und setzen Sie das Häkchen für 'Ponder'\nDie Namen erhalten automatisch ein '[ponder]'-Suffix zur Unterscheidung. Jetzt können Sie sehen, wie sich das Nachdenken auf die Leistung der Engine auswirkt!
+{h:"c44444aa",s:"Now we'll configure the global engine settings. Th",t:"2025-12-18"}=Jetzt konfigurieren wir die globalen Engine-Einstellungen. Diese Einstellungen gelten für alle Engines im Turnier und gewährleisten faire, konsistente Bedingungen.\n\nEinstellungen können für alle Engines oder einzeln pro Engine gesetzt werden. Wir ändern die Hash-Größe global und das Pondern pro Engine:\n• Lassen Sie das Kontrollkästchen neben Hash aktiviert und setzen Sie 'Hash (MB)' auf \1\n• Deaktivieren Sie das Kontrollkästchen neben Ponder - dies ermöglicht uns, das Pondern später pro Engine zu steuern
+{h:"0bac575c",s:"Now let's select the engines for our tournament. W",t:"2025-12-18"}=Jetzt wählen wir die Engines für unser Turnier aus. Wir demonstrieren spezifische Engine-Einstellungen: Vergleichen Sie dieselbe Engine gegen sich selbst - einmal mit aktiviertem Pondern und einmal ohne.\n\nIm Abschnitt 'Engine-Auswahl' wählen Sie dieselbe Engine zweimal aus (klicken Sie zweimal auf die '+'-Schaltfläche links von 'Verfügbare Engine')\nJetzt sehen Sie dieselbe Engine zweimal in der Liste 'Ausgewählte Engines'. Erweitern Sie die erste und setzen Sie das Häkchen für 'Ponder'\nDie Namen erhalten automatisch ein '[ponder]'-Suffix zur Unterscheidung. Jetzt können Sie sehen, wie sich das Pondern auf die Leistung der Engine auswirkt!
 {h:"c394d379",s:"Now we need opening positions. Without openings, e",t:"2025-12-18"}=Jetzt benötigen wir Eröffnungspositionen. Ohne Eröffnungen würde jedes Spiel von der Standard-Schachposition starten, was zu repetitiven Spielen führt.\n\nIm Abschnitt 'Eröffnung':\n• Klicken Sie auf 'Eröffnungsdatei' und wählen Sie eine Datei mit Eröffnungspositionen aus\n• Unterstützte Formate: .epd (EPD-Positionen), .pgn (Spielzüge) oder rohe FEN-Strings\nDas Format wird basierend auf Dateierweiterung und Inhalt automatisch erkannt.\n\nEröffnungsbücher sorgen für Vielfalt und testen Engines über verschiedene Positionen.
 {h:"469e9693",s:"Time to set up the tournament structure. In the 'T",t:"2025-12-18"}=Zeit, die Turnierstruktur einzurichten. Im Abschnitt 'Turnier' konfigurieren:\n\n• Typ: 'round-robin' - jede Engine spielt gegen jede andere Engine\n• Runden: \1 - das komplette Round-Robin wird zweimal gespielt\n• Spiele pro Paarung: \2 - jedes Engine-Paar spielt \3 Spiele pro Runde\n• Gleiche Eröffnung: \4 - jede Engine spielt dieselbe Eröffnung einmal mit Weiß und einmal mit Schwarz (Farben getauscht)\n\nMit diesen Einstellungen und \5 Engines erhalten Sie: \6 Runden × \7 Paarung × \8 Spiele \9 \10 Spiele insgesamt. Die Verwendung derselben Eröffnung zweimal (mit getauschten Farben) gewährleistet Fairness - jeder Eröffnungsvorteil wird ausgeglichen.
 {h:"2bbd090c",s:"Now configure the time control - how much time eac",t:"2025-12-18"}=Jetzt konfigurieren Sie die Zeitsteuerung - wie viel Zeit jede Engine erhält.\n\nIm Abschnitt 'Zeitsteuerung':\n• Wählen Sie '\1.\2+\3.\4' aus den vordefinierten Optionen\n\nDas bedeutet: \5 Sekunden Grundzeit + \6.\7 Sekunden (\8 Millisekunden) Inkrement pro Zug. Das Inkrement wird nach jedem Zug hinzugefügt, um plötzliche Zeitverluste zu verhindern.\n\nSie können entweder vordefinierte Zeitsteuerungen verwenden oder eine benutzerdefinierte einstellen. Zeiteinstellungen synchronisieren sich automatisch. Wenn Sie '\9.\10+\11.\12' auswählen, aktualisieren sich die benutzerdefinierten Felder entsprechend und umgekehrt.
