--- a/i18n/deu.lang
+++ b/i18n/deu.lang
@@ -26,7 +26,7 @@ id=Button
 {s:"Filter",t:"2025-12-16"}=Filter
 {s:"Test",t:"2025-12-28"}=Test
 {s:"Load",t:"2025-12-28"}=Laden
-{s:"Continue",t:"2025-12-23"}=Weiter
+{s:"Continue",t:"2025-12-28"}=Weiter
 {s:"Ok",t:"2025-12-15"}=OK
 {s:"Copy",t:"2025-12-15"}=Kopieren
 {s:"Paste",t:"2025-12-28"}=Einfügen
@@ -165,28 +165,28 @@ id=Input
 {s:"Engine Log - Base Name",t:"2025-12-18"}=Engine-Protokoll - Basisname
 {s:"Engine Log File Strategy",t:"2025-12-18"}=Strategie für Engine-Protokolldateien
 {s:"Language",t:"2025-12-18"}=Sprache
-{s:"Protocol",t:"2025-12-23"}=Protokoll
+{s:"Protocol",t:"2025-12-28"}=Protokoll
 {s:"Time Control",t:"2025-12-28"}=Zeitkontrolle
-{s:"UCI_ShowCurrLine",t:"2025-12-23"}=UCI_ShowCurrLine
-{s:"UCI_ShowRefutations",t:"2025-12-23"}=UCI_ShowRefutations
-{s:"CPUs",t:"2025-12-23"}=CPUs
-{s:"OwnBook",t:"2025-12-23"}=OwnBook
-{s:"Logfile",t:"2025-12-23"}=Protokolldatei
-{s:"Position Learn",t:"2025-12-23"}=Positions-Lernen
-{s:"Position Learn Filename",t:"2025-12-23"}=Positions-Lern-Dateiname
-{s:"Book Learn",t:"2025-12-23"}=Buch-Lernen
-{s:"Book Learn Filename",t:"2025-12-23"}=Buch-Lern-Dateiname
-{s:"NalimovCache",t:"2025-12-23"}=NalimovCache
-{s:"UCI_Chess",t:"2025-12-23"}=UCI_Chess
-{s:"UCI_LimitStrength",t:"2025-12-23"}=UCI_LimitStrength
-{s:"UCI_Elo",t:"2025-12-23"}=UCI_Elo
+{s:"UCI_ShowCurrLine",t:"2025-12-28"}=UCI_ShowCurrLine
+{s:"UCI_ShowRefutations",t:"2025-12-28"}=UCI_ShowRefutations
+{s:"CPUs",t:"2025-12-28"}=CPUs
+{s:"OwnBook",t:"2025-12-28"}=OwnBook
+{s:"Logfile",t:"2025-12-28"}=Protokolldatei
+{s:"Position Learn",t:"2025-12-28"}=Positions-Lernen
+{s:"Position Learn Filename",t:"2025-12-28"}=Positions-Lern-Dateiname
+{s:"Book Learn",t:"2025-12-28"}=Buch-Lernen
+{s:"Book Learn Filename",t:"2025-12-28"}=Buch-Lern-Dateiname
+{s:"NalimovCache",t:"2025-12-28"}=NalimovCache
+{s:"UCI_Chess",t:"2025-12-28"}=UCI_Chess
+{s:"UCI_LimitStrength",t:"2025-12-28"}=UCI_LimitStrength
+{s:"UCI_Elo",t:"2025-12-28"}=UCI_Elo
 {s:"Search",t:"2025-12-28"}=Suche
 {s:"Elo Lower (H\\1)",t:"2025-12-28"}=Elo Untere (H\1)
 {s:"Elo Upper (H\\1)",t:"2025-12-28"}=Elo Obere (H\1)
 {s:"Number of Games",t:"2025-12-16"}=Anzahl Spiele
-{s:"Ponder",t:"2025-12-21"}=Ponder
-{s:"Log",t:"2025-12-21"}=Protokoll
-{s:"UCI_AnalyseMode",t:"2025-12-21"}=UCI_AnalyseMode
+{s:"Ponder",t:"2025-12-28"}=Ponder
+{s:"Log",t:"2025-12-28"}=Protokoll
+{s:"UCI_AnalyseMode",t:"2025-12-28"}=UCI_AnalyseMode
 {s:"##directoryPath#####directoryPath",t:"2025-12-28"}=##directoryPath#####directoryPath
 {s:"##filePath#####filePath",t:"2025-12-22"}=##filePath#####filePath
 {s:"Milliseconds",t:"2025-12-13"}=Millisekunden
@@ -202,13 +202,14 @@ id=Input
 {s:"Centipawn threshold",t:"2025-12-28"}=Centipawn threshold
 {s:"Underpromotions",t:"2025-12-22"}=Underpromotions
 {s:"Move Overhead",t:"2025-12-22"}=Move Overhead
+{s:"Arguments",t:"2025-12-28"}=Arguments
 
 [Translation]
 id=Section
 {s:"Global Engine Settings",t:"2025-12-28"}=Globale Engine Einstellungen
 {s:"Engines",t:"2025-12-28"}=Engines
 {s:"Opening",t:"2025-12-28"}=Eröffnung
-{s:"Tournament",t:"2025-12-23"}=Turnier
+{s:"Tournament",t:"2025-12-28"}=Turnier
 {s:"Time Control",t:"2025-12-28"}=Zeitkontrolle
 {s:"Pgn",t:"2025-12-28"}=Pgn
 {s:"Adjudicate draw",t:"2025-12-28"}=Remis bewerten
@@ -334,18 +335,18 @@ id=Tooltip
 {s:"Resets all tutorials to their initial state",t:"2025-12-16"}=Setzt alle Lernprogramme auf ihren Anfangszustand zurück
 {s:"Edit value and click Apply to save changes",t:"2025-12-16"}=Wert bearbeiten und auf Übernehmen klicken, um Änderungen zu speichern
 {s:"Start new tournament with current configuration",t:"2025-12-23"}=Neues Turnier mit aktueller Konfiguration starten
-{s:"Remove selected engine from configuration",t:"2025-12-23"}=Ausgewählte Engine aus der Konfiguration entfernen
+{s:"Remove selected engine from configuration",t:"2025-12-28"}=Ausgewählte Engine aus der Konfiguration entfernen
 {s:"Auto-detect engine capabilities and supported options",t:"2025-12-28"}=Engine-Fähigkeiten und unterstützte Optionen automatisch erkennen
 {s:"Save tournament configuration and results to file",t:"2025-12-23"}=Turnier-Konfiguration und -Ergebnisse in Datei speichern
 {s:"Load tournament configuration and results from file",t:"2025-12-23"}=Turnier-Konfiguration und -Ergebnisse aus Datei laden
-{s:"Stop tournament immediately, aborting running games",t:"2025-12-23"}=Turnier sofort stoppen, laufende Spiele abbrechen
+{s:"Stop tournament immediately, aborting running games",t:"2025-12-28"}=Turnier sofort stoppen, laufende Spiele abbrechen
 {s:"Number of plies to play from position before starting engine analysis",t:"2025-12-21"}=Anzahl der Halbzüge, die von der Position aus gespielt werden sollen, bevor die Engine-Analyse startet
 {s:"Minimum analysis time per position in seconds",t:"2025-12-21"}=Mindestanalysezeit pro Position in Sekunden
 {s:"Maximum analysis time per position in seconds",t:"2025-12-21"}=Maximalanalysezeit pro Position in Sekunden
 {s:"Path to EPD or RAW position file to analyze",t:"2025-12-21"}=Pfad zur EPD- oder RAW-Positionsdatei zur Analyse
 {s:"Allow engine to think during opponent's time",t:"2025-12-23"}=Engine erlauben, während der Gegnerzeit zu denken
 {s:"Engine reports scores from white's perspective regardless of side to move",t:"2025-12-23"}=Engine meldet Scores aus Weißer Sicht unabhängig von der Seite am Zug
-{s:"Display name for the engine",t:"2025-12-23"}=Anzeigename für die Engine
+{s:"Display name for the engine",t:"2025-12-28"}=Anzeigename für die Engine
 {s:"Mark this engine to play against all others in gauntlet mode",t:"2025-12-23"}=Diese Engine markieren, um gegen alle anderen im Gauntlet-Modus zu spielen
 {s:"Stop tournament gracefully after current games finish",t:"2025-12-23"}=Turnier sanft stoppen, nachdem aktuelle Spiele beendet sind
 {s:"Continue tournament with current configuration",t:"2025-12-23"}=Turnier mit aktueller Konfiguration fortsetzen
@@ -355,7 +356,7 @@ id=Tooltip
 {s:"Number of games running in parallel",t:"2025-12-28"}=Anzahl der parallel laufenden Spiele
 {s:"Add this engine to tournament selection",t:"2025-12-23"}=Diese Engine zur Turnierauswahl hinzufügen
 {s:"Repeat all pairings this many times",t:"2025-12-23"}=Alle Paarungen diese Anzahl mal wiederholen
-{s:"Tournament progress: games played / total games",t:"2025-12-23"}=Turnierfortschritt: gespielte Spiele / Gesamtspiele
+{s:"Tournament progress: games played / total games",t:"2025-12-28"}=Turnierfortschritt: gespielte Spiele / Gesamtspiele
 {s:"Number of positions analyzed in parallel",t:"2025-12-21"}=Anzahl der parallel analysierten Positionen
 {s:"Start EPD position analysis",t:"2025-12-18"}=EPD-Positionsanalyse starten
 {s:"Stop EPD analysis immediately",t:"2025-12-18"}=EPD-Analyse sofort stoppen
@@ -381,7 +382,7 @@ id=Tooltip
 {s:"View detailed tournament results.",t:"2025-12-22"}=Detaillierte Turnierergebnisse anzeigen.
 {s:"Select option: Lernprogramm",t:"2025-12-18"}=Option auswählen: Lernprogramm
 {s:"View the current tournament results without continuing.",t:"2025-12-21"}=Aktuelle Turnierergebnisse anzeigen, ohne fortzufahren.
-{s:"Chess engine communication protocol (UCI or XBoard)",t:"2025-12-23"}=Schach-Engine-Kommunikationsprotokoll (UCI oder XBoard)
+{s:"Chess engine communication protocol (UCI or XBoard)",t:"2025-12-28"}=Schach-Engine-Kommunikationsprotokoll (UCI oder XBoard)
 {s:"Open filter dialog to filter games by criteria",t:"2025-12-16"}=Filterdialog öffnen, um Spiele nach Kriterien zu filtern
 {h:"d2d4433c",s:"Remain in the chatbot interface. You can switch to",t:"2025-12-21"}=Bleiben Sie in der Chatbot-Oberfläche. Sie können später über die Tabs zur Turnieransicht wechseln.
 {h:"41121b47",s:"End the currently running tournament and stop all ",t:"2025-12-22"}=Beenden Sie das aktuell laufende Turnier und stoppen Sie alle Spiele. Der Fortschritt wird in die PGN gespeichert, falls konfiguriert.
@@ -506,6 +507,7 @@ id=Tooltip
 {s:"Load older messages from history (double the display count).",t:"2025-12-21"}=Load older messages from history (double the display count).
 {s:"Enable global hash size setting for all engines",t:"2025-12-23"}=Enable global hash size setting for all engines
 {s:"Enable global trace level for all engines",t:"2025-12-23"}=Enable global trace level for all engines
+{s:"Command-line arguments to pass to the engine executable",t:"2025-12-28"}=Command-line arguments to pass to the engine executable
 
 [Translation]
 id=Table
@@ -520,9 +522,9 @@ id=Table
 {s:"Value",t:"2025-12-28"}=Wert
 {s:"Primary variant",t:"2025-12-28"}=Hauptvariante
 {s:"Name",t:"2025-12-28"}=Name
-{s:"Elo",t:"2025-12-23"}=Elo
-{s:"Error",t:"2025-12-23"}=Fehler
-{s:"Score",t:"2025-12-23"}=Punkte
+{s:"Elo",t:"2025-12-28"}=Elo
+{s:"Error",t:"2025-12-28"}=Fehler
+{s:"Score",t:"2025-12-28"}=Punkte
 {s:"Total",t:"2025-12-23"}=Gesamt
 {s:"WDL",t:"2025-12-28"}=WDL
 {s:"Count",t:"2025-12-28"}=Anzahl
@@ -541,7 +543,7 @@ id=Table
 {s:"Rating",t:"2025-12-28"}=Rating
 {s:"Games",t:"2025-12-28"}=Spiele
 {s:"Rank",t:"2025-12-22"}=Rang
-{s:"%",t:"2025-12-23"}=%
+{s:"%",t:"2025-12-28"}=%
 {s:"Amoeba \\1.\\2.w\\3p",t:"2025-12-21"}=Amoeba \1.\2.w\3p
 {s:"Qa",t:"2025-12-22"}=Qa
 {s:"S-B",t:"2025-12-22"}=S-B
