--- a/i18n/eng.lang
+++ b/i18n/eng.lang
@@ -26,7 +26,7 @@ id=Button
 {s:"Filter",t:"2025-12-16"}=Filter
 {s:"Test",t:"2025-12-28"}=Test
 {s:"Load",t:"2025-12-28"}=Load
-{s:"Continue",t:"2025-12-23"}=Continue
+{s:"Continue",t:"2025-12-28"}=Continue
 {s:"Ok",t:"2025-12-15"}=Ok
 {s:"Copy",t:"2025-12-15"}=Copy
 {s:"Paste",t:"2025-12-28"}=Paste
@@ -169,21 +169,21 @@ Elo Upper (H1)=Elo Upper (H1)
 {s:"Engine Log - Base Name",t:"2025-12-18"}=Engine Log - Base Name
 {s:"Engine Log File Strategy",t:"2025-12-18"}=Engine Log File Strategy
 {s:"Language",t:"2025-12-18"}=Language
-{s:"Protocol",t:"2025-12-23"}=Protocol
+{s:"Protocol",t:"2025-12-28"}=Protocol
 {s:"Time Control",t:"2025-12-28"}=Time Control
-{s:"UCI_ShowCurrLine",t:"2025-12-23"}=UCI_ShowCurrLine
-{s:"UCI_ShowRefutations",t:"2025-12-23"}=UCI_ShowRefutations
-{s:"CPUs",t:"2025-12-23"}=CPUs
-{s:"OwnBook",t:"2025-12-23"}=OwnBook
-{s:"Logfile",t:"2025-12-23"}=Logfile
-{s:"Position Learn",t:"2025-12-23"}=Position Learn
-{s:"Position Learn Filename",t:"2025-12-23"}=Position Learn Filename
-{s:"Book Learn",t:"2025-12-23"}=Book Learn
-{s:"Book Learn Filename",t:"2025-12-23"}=Book Learn Filename
-{s:"NalimovCache",t:"2025-12-23"}=NalimovCache
-{s:"UCI_Chess",t:"2025-12-23"}=UCI_Chess
-{s:"UCI_LimitStrength",t:"2025-12-23"}=UCI_LimitStrength
-{s:"UCI_Elo",t:"2025-12-23"}=UCI_Elo
+{s:"UCI_ShowCurrLine",t:"2025-12-28"}=UCI_ShowCurrLine
+{s:"UCI_ShowRefutations",t:"2025-12-28"}=UCI_ShowRefutations
+{s:"CPUs",t:"2025-12-28"}=CPUs
+{s:"OwnBook",t:"2025-12-28"}=OwnBook
+{s:"Logfile",t:"2025-12-28"}=Logfile
+{s:"Position Learn",t:"2025-12-28"}=Position Learn
+{s:"Position Learn Filename",t:"2025-12-28"}=Position Learn Filename
+{s:"Book Learn",t:"2025-12-28"}=Book Learn
+{s:"Book Learn Filename",t:"2025-12-28"}=Book Learn Filename
+{s:"NalimovCache",t:"2025-12-28"}=NalimovCache
+{s:"UCI_Chess",t:"2025-12-28"}=UCI_Chess
+{s:"UCI_LimitStrength",t:"2025-12-28"}=UCI_LimitStrength
+{s:"UCI_Elo",t:"2025-12-28"}=UCI_Elo
 {s:"Search",t:"2025-12-28"}=Search
 {s:"Elo Lower (H\\1)",t:"2025-12-28"}=Elo Lower (H\1)
 {s:"Elo Upper (H\\1)",t:"2025-12-28"}=Elo Upper (H\1)
@@ -192,9 +192,9 @@ Elo Upper (H1)=Elo Upper (H1)
 {s:"Required consecutive moves",t:"2025-12-28"}=Required consecutive moves
 {s:"Centipawn threshold",t:"2025-12-28"}=Centipawn threshold
 {s:"Number of Games",t:"2025-12-16"}=Number of Games
-{s:"Ponder",t:"2025-12-21"}=Ponder
-{s:"Log",t:"2025-12-21"}=Log
-{s:"UCI_AnalyseMode",t:"2025-12-21"}=UCI_AnalyseMode
+{s:"Ponder",t:"2025-12-28"}=Ponder
+{s:"Log",t:"2025-12-28"}=Log
+{s:"UCI_AnalyseMode",t:"2025-12-28"}=UCI_AnalyseMode
 {s:"##directoryPath#####directoryPath",t:"2025-12-28"}=##directoryPath#####directoryPath
 {s:"##filePath#####filePath",t:"2025-12-22"}=##filePath#####filePath
 {s:"Milliseconds",t:"2025-12-13"}=Milliseconds
@@ -206,6 +206,7 @@ Elo Upper (H1)=Elo Upper (H1)
 {s:"Both side decides",t:"2025-12-28"}=Both side decides
 {s:"Underpromotions",t:"2025-12-22"}=Underpromotions
 {s:"Move Overhead",t:"2025-12-22"}=Move Overhead
+{s:"Arguments",t:"2025-12-28"}=Arguments
 
 [Translation]
 id=Snackbar
@@ -299,9 +300,9 @@ id=Table
 {s:"Value",t:"2025-12-28"}=Value
 {s:"Primary variant",t:"2025-12-28"}=Primary variant
 {s:"Name",t:"2025-12-28"}=Name
-{s:"Elo",t:"2025-12-23"}=Elo
-{s:"Error",t:"2025-12-23"}=Error
-{s:"Score",t:"2025-12-23"}=Score
+{s:"Elo",t:"2025-12-28"}=Elo
+{s:"Error",t:"2025-12-28"}=Error
+{s:"Score",t:"2025-12-28"}=Score
 {s:"Total",t:"2025-12-23"}=Total
 {s:"WDL",t:"2025-12-28"}=WDL
 {s:"Count",t:"2025-12-28"}=Count
@@ -322,7 +323,7 @@ id=Table
 {s:"Spike \\1.\\2.",t:"2025-12-16"}=Spike \1.\2.
 {s:"Qapla \\1.\\2.",t:"2025-12-15"}=Qapla \1.\2.
 {s:"Rank",t:"2025-12-22"}=Rank
-{s:"%",t:"2025-12-23"}=%
+{s:"%",t:"2025-12-28"}=%
 {s:"Sp",t:"2025-12-22"}=Sp
 {s:"Qa",t:"2025-12-22"}=Qa
 {s:"Co",t:"2025-12-09"}=Co
@@ -345,7 +346,7 @@ id=Tooltip
 {s:"Add this engine to tournament selection",t:"2025-12-23"}=Add this engine to tournament selection
 {s:"Clear all tournament data and results",t:"2025-12-23"}=Clear all tournament data and results
 {s:"Number of games running in parallel",t:"2025-12-28"}=Number of games running in parallel
-{s:"Tournament progress: games played / total games",t:"2025-12-23"}=Tournament progress: games played / total games
+{s:"Tournament progress: games played / total games",t:"2025-12-28"}=Tournament progress: games played / total games
 {s:"Repeat all pairings this many times",t:"2025-12-23"}=Repeat all pairings this many times
 {s:"Disable automatic color swap after each game",t:"2025-12-23"}=Disable automatic color swap after each game
 {s:"Average Elo level for scaling rating output",t:"2025-12-23"}=Average Elo level for scaling rating output
@@ -380,18 +381,18 @@ id=Tooltip
 {s:"Resets all tutorials to their initial state",t:"2025-12-16"}=Resets all tutorials to their initial state
 {s:"Edit value and click Apply to save changes",t:"2025-12-16"}=Edit value and click Apply to save changes
 {s:"Start new tournament with current configuration",t:"2025-12-23"}=Start new tournament with current configuration
-{s:"Remove selected engine from configuration",t:"2025-12-23"}=Remove selected engine from configuration
+{s:"Remove selected engine from configuration",t:"2025-12-28"}=Remove selected engine from configuration
 {s:"Auto-detect engine capabilities and supported options",t:"2025-12-28"}=Auto-detect engine capabilities and supported options
 {s:"Save tournament configuration and results to file",t:"2025-12-23"}=Save tournament configuration and results to file
 {s:"Load tournament configuration and results from file",t:"2025-12-23"}=Load tournament configuration and results from file
-{s:"Stop tournament immediately, aborting running games",t:"2025-12-23"}=Stop tournament immediately, aborting running games
+{s:"Stop tournament immediately, aborting running games",t:"2025-12-28"}=Stop tournament immediately, aborting running games
 {s:"Number of plies to play from position before starting engine analysis",t:"2025-12-21"}=Number of plies to play from position before starting engine analysis
 {s:"Minimum analysis time per position in seconds",t:"2025-12-21"}=Minimum analysis time per position in seconds
 {s:"Maximum analysis time per position in seconds",t:"2025-12-21"}=Maximum analysis time per position in seconds
 {s:"Path to EPD or RAW position file to analyze",t:"2025-12-21"}=Path to EPD or RAW position file to analyze
 {s:"Allow engine to think during opponent's time",t:"2025-12-23"}=Allow engine to think during opponent's time
 {s:"Engine reports scores from white's perspective regardless of side to move",t:"2025-12-23"}=Engine reports scores from white's perspective regardless of side to move
-{s:"Display name for the engine",t:"2025-12-23"}=Display name for the engine
+{s:"Display name for the engine",t:"2025-12-28"}=Display name for the engine
 {s:"Mark this engine to play against all others in gauntlet mode",t:"2025-12-23"}=Mark this engine to play against all others in gauntlet mode
 {s:"Stop tournament gracefully after current games finish",t:"2025-12-23"}=Stop tournament gracefully after current games finish
 {s:"Continue tournament with current configuration",t:"2025-12-23"}=Continue tournament with current configuration
@@ -420,7 +421,7 @@ id=Tooltip
 {s:"View detailed tournament results.",t:"2025-12-22"}=View detailed tournament results.
 {s:"Select option: Lernprogramm",t:"2025-12-18"}=Select option: Lernprogramm
 {s:"View the current tournament results without continuing.",t:"2025-12-21"}=View the current tournament results without continuing.
-{s:"Chess engine communication protocol (UCI or XBoard)",t:"2025-12-23"}=Chess engine communication protocol (UCI or XBoard)
+{s:"Chess engine communication protocol (UCI or XBoard)",t:"2025-12-28"}=Chess engine communication protocol (UCI or XBoard)
 {s:"Open filter dialog to filter games by criteria",t:"2025-12-16"}=Open filter dialog to filter games by criteria
 {h:"d2d4433c",s:"Remain in the chatbot interface. You can switch to",t:"2025-12-21"}=Remain in the chatbot interface. You can switch to tournament view later via the tabs.
 {h:"41121b47",s:"End the currently running tournament and stop all ",t:"2025-12-22"}=End the currently running tournament and stop all games. Progress will be saved to the PGN if configured.
@@ -543,6 +544,7 @@ id=Tooltip
 {s:"Stop SPRT tournament gracefully after current games finish",t:"2025-12-21"}=Stop SPRT tournament gracefully after current games finish
 {s:"Continue SPRT tournament with current configuration",t:"2025-12-28"}=Continue SPRT tournament with current configuration
 {s:"Load older messages from history (double the display count).",t:"2025-12-21"}=Load older messages from history (double the display count).
+{s:"Command-line arguments to pass to the engine executable",t:"2025-12-28"}=Command-line arguments to pass to the engine executable
 
 [Translation]
 id=Tab
@@ -791,7 +793,7 @@ id=Section
 {s:"Global Engine Settings",t:"2025-12-28"}=Global Engine Settings
 {s:"Engines",t:"2025-12-28"}=Engines
 {s:"Opening",t:"2025-12-28"}=Opening
-{s:"Tournament",t:"2025-12-23"}=Tournament
+{s:"Tournament",t:"2025-12-28"}=Tournament
 {s:"Time Control",t:"2025-12-28"}=Time Control
 {s:"Pgn",t:"2025-12-28"}=Pgn
 {s:"Adjudicate draw",t:"2025-12-28"}=Adjudicate draw
