--- a/i18n/fra.lang
+++ b/i18n/fra.lang
@@ -26,7 +26,7 @@ id=Button
 {s:"Filter",t:"2025-12-16"}=Filtre
 {s:"Test",t:"2025-12-28"}=Test
 {s:"Load",t:"2025-12-28"}=Charger
-{s:"Continue",t:"2025-12-23"}=Suite
+{s:"Continue",t:"2025-12-28"}=Suite
 {s:"Ok",t:"2025-12-15"}=OK
 {s:"Copy",t:"2025-12-15"}=Copier
 {s:"Paste",t:"2025-12-28"}=Coller
@@ -175,26 +175,26 @@ File format=Format de fichier
 {s:"MultiPV",t:"2025-12-28"}=MultiPV
 {s:"UCI_EngineAbout",t:"2025-12-28"}=UCI_EngineAbout
 {s:"qaplaBitbaseCache",t:"2025-12-28"}=qaplaBitbaseCache
-{s:"Protocol",t:"2025-12-23"}=Protocol
+{s:"Protocol",t:"2025-12-28"}=Protocol
 {s:"Time Control",t:"2025-12-28"}=Contrôle du temps
-{s:"UCI_ShowCurrLine",t:"2025-12-23"}=UCI_ShowCurrLine
-{s:"UCI_ShowRefutations",t:"2025-12-23"}=UCI_ShowRefutations
-{s:"CPUs",t:"2025-12-23"}=CPUs
-{s:"OwnBook",t:"2025-12-23"}=OwnBook
-{s:"Logfile",t:"2025-12-23"}=Logfile
-{s:"Position Learn",t:"2025-12-23"}=Position Learn
-{s:"Position Learn Filename",t:"2025-12-23"}=Position Learn Filename
-{s:"Book Learn",t:"2025-12-23"}=Book Learn
-{s:"Book Learn Filename",t:"2025-12-23"}=Book Learn Filename
-{s:"NalimovCache",t:"2025-12-23"}=NalimovCache
-{s:"UCI_Chess",t:"2025-12-23"}=UCI_Chess
-{s:"UCI_LimitStrength",t:"2025-12-23"}=UCI_LimitStrength
-{s:"UCI_Elo",t:"2025-12-23"}=UCI_Elo
+{s:"UCI_ShowCurrLine",t:"2025-12-28"}=UCI_ShowCurrLine
+{s:"UCI_ShowRefutations",t:"2025-12-28"}=UCI_ShowRefutations
+{s:"CPUs",t:"2025-12-28"}=CPUs
+{s:"OwnBook",t:"2025-12-28"}=OwnBook
+{s:"Logfile",t:"2025-12-28"}=Logfile
+{s:"Position Learn",t:"2025-12-28"}=Position Learn
+{s:"Position Learn Filename",t:"2025-12-28"}=Position Learn Filename
+{s:"Book Learn",t:"2025-12-28"}=Book Learn
+{s:"Book Learn Filename",t:"2025-12-28"}=Book Learn Filename
+{s:"NalimovCache",t:"2025-12-28"}=NalimovCache
+{s:"UCI_Chess",t:"2025-12-28"}=UCI_Chess
+{s:"UCI_LimitStrength",t:"2025-12-28"}=UCI_LimitStrength
+{s:"UCI_Elo",t:"2025-12-28"}=UCI_Elo
 {s:"Elo Lower (H\\1)",t:"2025-12-28"}=Elo Lower (H\1)
 {s:"Elo Upper (H\\1)",t:"2025-12-28"}=Elo Upper (H\1)
-{s:"Ponder",t:"2025-12-21"}=Ponder
-{s:"Log",t:"2025-12-21"}=Log
-{s:"UCI_AnalyseMode",t:"2025-12-21"}=UCI_AnalyseMode
+{s:"Ponder",t:"2025-12-28"}=Ponder
+{s:"Log",t:"2025-12-28"}=Log
+{s:"UCI_AnalyseMode",t:"2025-12-28"}=UCI_AnalyseMode
 {s:"##directoryPath#####directoryPath",t:"2025-12-28"}=##directoryPath#####directoryPath
 {s:"##filePath#####filePath",t:"2025-12-22"}=##filePath#####filePath
 {s:"Milliseconds",t:"2025-12-13"}=Milliseconds
@@ -205,6 +205,7 @@ File format=Format de fichier
 {s:"Threads",t:"2025-12-22"}=Threads
 {s:"Underpromotions",t:"2025-12-22"}=Underpromotions
 {s:"Move Overhead",t:"2025-12-22"}=Move Overhead
+{s:"Arguments",t:"2025-12-28"}=Arguments
 
 [Translation]
 id=Option
@@ -221,7 +222,7 @@ id=Section
 {s:"Global Engine Settings",t:"2025-12-28"}=Paramètres globaux du moteur
 {s:"Engines",t:"2025-12-28"}=Moteurs
 {s:"Opening",t:"2025-12-28"}=Ouverture
-{s:"Tournament",t:"2025-12-23"}=Tournoi
+{s:"Tournament",t:"2025-12-28"}=Tournoi
 {s:"Time Control",t:"2025-12-28"}=Contrôle du temps
 {s:"Pgn",t:"2025-12-28"}=Pgn
 {s:"Adjudicate draw",t:"2025-12-28"}=Adjuger nulle
@@ -332,9 +333,9 @@ id=Table
 {s:"Value",t:"2025-12-28"}=Valeur
 {s:"Primary variant",t:"2025-12-28"}=Variante principale
 {s:"Name",t:"2025-12-28"}=Nom
-{s:"Elo",t:"2025-12-23"}=Elo
-{s:"Error",t:"2025-12-23"}=Erreur
-{s:"Score",t:"2025-12-23"}=Score
+{s:"Elo",t:"2025-12-28"}=Elo
+{s:"Error",t:"2025-12-28"}=Erreur
+{s:"Score",t:"2025-12-28"}=Score
 {s:"Total",t:"2025-12-23"}=Total
 {s:"WDL",t:"2025-12-28"}=WDL
 {s:"Count",t:"2025-12-28"}=Nombre
@@ -355,7 +356,7 @@ id=Table
 {s:"Spike \\1.\\2.",t:"2025-12-16"}=Spike \1.\2.
 {s:"Qapla \\1.\\2.",t:"2025-12-15"}=Qapla \1.\2.
 {s:"Rank",t:"2025-12-22"}=Rang
-{s:"%",t:"2025-12-23"}=%
+{s:"%",t:"2025-12-28"}=%
 {s:"Sp",t:"2025-12-22"}=Sp
 {s:"Qa",t:"2025-12-22"}=Qa
 {s:"Co",t:"2025-12-09"}=Co
@@ -406,18 +407,18 @@ id=Tooltip
 {s:"Resets all tutorials to their initial state",t:"2025-12-16"}=Remet tous les tutoriels à leur état initial
 {s:"Edit value and click Apply to save changes",t:"2025-12-16"}=Modifier la valeur et cliquer sur Appliquer pour sauvegarder les changements
 {s:"Start new tournament with current configuration",t:"2025-12-23"}=Démarrer un nouveau tournoi avec la configuration actuelle
-{s:"Remove selected engine from configuration",t:"2025-12-23"}=Retirer le moteur sélectionné de la configuration
+{s:"Remove selected engine from configuration",t:"2025-12-28"}=Retirer le moteur sélectionné de la configuration
 {s:"Auto-detect engine capabilities and supported options",t:"2025-12-28"}=Détecter automatiquement les capacités du moteur et les options supportées
 {s:"Save tournament configuration and results to file",t:"2025-12-23"}=Sauvegarder la configuration et les résultats du tournoi dans un fichier
 {s:"Load tournament configuration and results from file",t:"2025-12-23"}=Charger la configuration et les résultats du tournoi depuis un fichier
-{s:"Stop tournament immediately, aborting running games",t:"2025-12-23"}=Arrêter le tournoi immédiatement, en annulant les parties en cours
+{s:"Stop tournament immediately, aborting running games",t:"2025-12-28"}=Arrêter le tournoi immédiatement, en annulant les parties en cours
 {s:"Number of plies to play from position before starting engine analysis",t:"2025-12-21"}=Nombre de demi-coups à jouer depuis la position avant de commencer l'analyse moteur
 {s:"Minimum analysis time per position in seconds",t:"2025-12-21"}=Temps d'analyse minimum par position en secondes
 {s:"Maximum analysis time per position in seconds",t:"2025-12-21"}=Temps d'analyse maximum par position en secondes
 {s:"Path to EPD or RAW position file to analyze",t:"2025-12-21"}=Chemin vers le fichier de position EPD ou RAW à analyser
 {s:"Allow engine to think during opponent's time",t:"2025-12-23"}=Permettre au moteur de réfléchir pendant le temps de l'adversaire
 {s:"Engine reports scores from white's perspective regardless of side to move",t:"2025-12-23"}=Le moteur rapporte les scores du point de vue des blancs indépendamment du côté à jouer
-{s:"Display name for the engine",t:"2025-12-23"}=Nom d'affichage pour le moteur
+{s:"Display name for the engine",t:"2025-12-28"}=Nom d'affichage pour le moteur
 {s:"Mark this engine to play against all others in gauntlet mode",t:"2025-12-23"}=Marquer ce moteur pour jouer contre tous les autres en mode gauntlet
 {s:"Stop tournament gracefully after current games finish",t:"2025-12-23"}=Arrêter le tournoi gracieusement après la fin des parties actuelles
 {s:"Continue tournament with current configuration",t:"2025-12-23"}=Continuer le tournoi avec la configuration actuelle
@@ -427,7 +428,7 @@ id=Tooltip
 {s:"Add this engine to tournament selection",t:"2025-12-23"}=Ajouter ce moteur à la sélection du tournoi
 Tournament type:\n  gauntlet - One engine plays against all others\n  round-robin - Every engine plays against every other engine=Type de tournoi :\n  gauntlet - Un moteur joue contre tous les autres\n  round-robin - Chaque moteur joue contre chaque autre moteur
 {s:"Repeat all pairings this many times",t:"2025-12-23"}=Répéter toutes les paires ce nombre de fois
-{s:"Tournament progress: games played / total games",t:"2025-12-23"}=Progression du tournoi : parties jouées / total des parties
+{s:"Tournament progress: games played / total games",t:"2025-12-28"}=Progression du tournoi : parties jouées / total des parties
 {s:"Number of positions analyzed in parallel",t:"2025-12-21"}=Nombre de positions analysées en parallèle
 {s:"Start EPD position analysis",t:"2025-12-18"}=Démarrer l'analyse de position EPD
 {s:"Stop EPD analysis immediately",t:"2025-12-18"}=Arrêter l'analyse EPD immédiatement
@@ -453,7 +454,7 @@ Tournament type:\n  gauntlet - One engine plays against all others\n  round-robi
 {s:"View detailed tournament results.",t:"2025-12-22"}=Voir les résultats détaillés du tournoi.
 {s:"Select option: Lernprogramm",t:"2025-12-18"}=Sélectionner l'option : Programme d'apprentissage
 {s:"View the current tournament results without continuing.",t:"2025-12-21"}=Voir les résultats actuels du tournoi sans continuer.
-{s:"Chess engine communication protocol (UCI or XBoard)",t:"2025-12-23"}=Protocole de communication du moteur d'échecs (UCI ou XBoard)
+{s:"Chess engine communication protocol (UCI or XBoard)",t:"2025-12-28"}=Protocole de communication du moteur d'échecs (UCI ou XBoard)
 {s:"Open filter dialog to filter games by criteria",t:"2025-12-16"}=Ouvrir la boîte de dialogue de filtre pour filtrer les parties par critères
 {h:"d2d4433c",s:"Remain in the chatbot interface. You can switch to",t:"2025-12-21"}=Rester dans l'interface chatbot. Vous pouvez basculer vers la vue tournoi plus tard via les onglets.
 {h:"41121b47",s:"End the currently running tournament and stop all ",t:"2025-12-22"}=Terminer le tournoi en cours et arrêter toutes les parties. La progression sera sauvegardée dans le PGN si configuré.
@@ -576,6 +577,7 @@ Tournament type:\n  gauntlet - One engine plays against all others\n  round-robi
 {s:"Stop SPRT tournament gracefully after current games finish",t:"2025-12-21"}=Stop SPRT tournament gracefully after current games finish
 {s:"Continue SPRT tournament with current configuration",t:"2025-12-28"}=Continue SPRT tournament with current configuration
 {s:"Load older messages from history (double the display count).",t:"2025-12-21"}=Load older messages from history (double the display count).
+{s:"Command-line arguments to pass to the engine executable",t:"2025-12-28"}=Command-line arguments to pass to the engine executable
 
 [Translation]
 id=Tab
